# crawledmathdata

./: README.md  pyproject.toml
scripts/: run_crawler.py
src/crawledmathdata/: __init__.py  crawler.py  refiner.py
