[project]
name = "crawledmathdata"
version = "0.1.0"
description = "Web crawler for collecting mathematics data for AI training"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "scrapy>=2.11.0",
    "pandas>=2.3.3",
    "numpy>=2.2.6",
    "lxml>=5.0.0",
    "html5lib>=1.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"